@@ -89,9 +89,9 @@ public class StreamsGroupTest {
     private StreamsGroup createStreamsGroup(String groupId) {
         SnapshotRegistry snapshotRegistry = new SnapshotRegistry(LOG_CONTEXT);
         return new StreamsGroup(
-            LOG_CONTEXT,
-            snapshotRegistry,
-            groupId
+                LOG_CONTEXT,
+                snapshotRegistry,
+                groupId
         );
     }
 
@@ -142,7 +142,7 @@ public class StreamsGroupTest {
         assertEquals("member-id", member.memberId());
 
         assertThrows(UnknownMemberIdException.class, () ->
-            streamsGroup.getMemberOrThrow("does-not-exist"));
+                streamsGroup.getMemberOrThrow("does-not-exist"));
     }
 
     @Test
@@ -176,8 +176,8 @@ public class StreamsGroupTest {
         member = streamsGroup.getOrCreateDefaultMember("member");
 
         member = new StreamsGroupMember.Builder(member)
-            .setInstanceId("instance")
-            .build();
+                .setInstanceId("instance")
+                .build();
 
         streamsGroup.updateMember(member);
 
@@ -203,8 +203,8 @@ public class StreamsGroupTest {
         StreamsGroup streamsGroup = createStreamsGroup("foo");
 
         StreamsGroupMember member = new StreamsGroupMember.Builder("member")
-            .setInstanceId("instance")
-            .build();
+                .setInstanceId("instance")
+                .build();
 
         streamsGroup.updateMember(member);
         assertTrue(streamsGroup.hasMember("member"));
@@ -225,76 +225,76 @@ public class StreamsGroupTest {
         StreamsGroupMember member;
 
         member = new StreamsGroupMember.Builder("member")
-            .setProcessId("process")
-            .setAssignedTasks(
-                new TasksTupleWithEpochs(
-                    mkTasksPerSubtopologyWithCommonEpoch(10, mkTasks(fooSubtopology, 1)),
-                    mkTasksPerSubtopology(mkTasks(fooSubtopology, 2)),
-                    mkTasksPerSubtopology(mkTasks(fooSubtopology, 3))
+                .setProcessId("process")
+                .setAssignedTasks(
+                        new TasksTupleWithEpochs(
+                                mkTasksPerSubtopologyWithCommonEpoch(10, mkTasks(fooSubtopology, 1)),
+                                mkTasksPerSubtopology(mkTasks(fooSubtopology, 2)),
+                                mkTasksPerSubtopology(mkTasks(fooSubtopology, 3))
+                        )
                 )
-            )
-            .setTasksPendingRevocation(
-                new TasksTupleWithEpochs(
-                    mkTasksPerSubtopologyWithCommonEpoch(10, mkTasks(barSubtopology, 4)),
-                    mkTasksPerSubtopology(mkTasks(barSubtopology, 5)),
-                    mkTasksPerSubtopology(mkTasks(barSubtopology, 6))
+                .setTasksPendingRevocation(
+                        new TasksTupleWithEpochs(
+                                mkTasksPerSubtopologyWithCommonEpoch(10, mkTasks(barSubtopology, 4)),
+                                mkTasksPerSubtopology(mkTasks(barSubtopology, 5)),
+                                mkTasksPerSubtopology(mkTasks(barSubtopology, 6))
+                        )
                 )
-            )
-            .build();
+                .build();
 
         streamsGroup.updateMember(member);
 
         assertEquals("process", streamsGroup.currentActiveTaskProcessId(fooSubtopology, 1));
         assertEquals(Set.of("process"),
-            streamsGroup.currentStandbyTaskProcessIds(fooSubtopology, 2));
+                streamsGroup.currentStandbyTaskProcessIds(fooSubtopology, 2));
         assertEquals(Set.of("process"),
-            streamsGroup.currentWarmupTaskProcessIds(fooSubtopology, 3));
+                streamsGroup.currentWarmupTaskProcessIds(fooSubtopology, 3));
         assertEquals("process", streamsGroup.currentActiveTaskProcessId(barSubtopology, 4));
         assertEquals(Set.of("process"),
-            streamsGroup.currentStandbyTaskProcessIds(barSubtopology, 5));
+                streamsGroup.currentStandbyTaskProcessIds(barSubtopology, 5));
         assertEquals(Set.of("process"),
-            streamsGroup.currentWarmupTaskProcessIds(barSubtopology, 6));
+                streamsGroup.currentWarmupTaskProcessIds(barSubtopology, 6));
         assertNull(streamsGroup.currentActiveTaskProcessId(zarSubtopology, 7));
         assertEquals(Set.of(),
-            streamsGroup.currentStandbyTaskProcessIds(zarSubtopology, 8));
+                streamsGroup.currentStandbyTaskProcessIds(zarSubtopology, 8));
         assertEquals(Set.of(),
-            streamsGroup.currentWarmupTaskProcessIds(zarSubtopology, 9));
+                streamsGroup.currentWarmupTaskProcessIds(zarSubtopology, 9));
 
         member = new StreamsGroupMember.Builder(member)
-            .setProcessId("process1")
-            .setAssignedTasks(
-                new TasksTupleWithEpochs(
-                    mkTasksPerSubtopologyWithCommonEpoch(10, mkTasks(fooSubtopology, 1)),
-                    mkTasksPerSubtopology(mkTasks(fooSubtopology, 2)),
-                    mkTasksPerSubtopology(mkTasks(fooSubtopology, 3))
+                .setProcessId("process1")
+                .setAssignedTasks(
+                        new TasksTupleWithEpochs(
+                                mkTasksPerSubtopologyWithCommonEpoch(10, mkTasks(fooSubtopology, 1)),
+                                mkTasksPerSubtopology(mkTasks(fooSubtopology, 2)),
+                                mkTasksPerSubtopology(mkTasks(fooSubtopology, 3))
+                        )
                 )
-            )
-            .setTasksPendingRevocation(
-                new TasksTupleWithEpochs(
-                    mkTasksPerSubtopologyWithCommonEpoch(10, mkTasks(barSubtopology, 4)),
-                    mkTasksPerSubtopology(mkTasks(barSubtopology, 5)),
-                    mkTasksPerSubtopology(mkTasks(barSubtopology, 6))
+                .setTasksPendingRevocation(
+                        new TasksTupleWithEpochs(
+                                mkTasksPerSubtopologyWithCommonEpoch(10, mkTasks(barSubtopology, 4)),
+                                mkTasksPerSubtopology(mkTasks(barSubtopology, 5)),
+                                mkTasksPerSubtopology(mkTasks(barSubtopology, 6))
+                        )
                 )
-            )
-            .build();
+                .build();
 
         streamsGroup.updateMember(member);
 
         assertEquals("process1", streamsGroup.currentActiveTaskProcessId(fooSubtopology, 1));
         assertEquals(Set.of("process1"),
-            streamsGroup.currentStandbyTaskProcessIds(fooSubtopology, 2));
+                streamsGroup.currentStandbyTaskProcessIds(fooSubtopology, 2));
         assertEquals(Set.of("process1"),
-            streamsGroup.currentWarmupTaskProcessIds(fooSubtopology, 3));
+                streamsGroup.currentWarmupTaskProcessIds(fooSubtopology, 3));
         assertEquals("process1", streamsGroup.currentActiveTaskProcessId(barSubtopology, 4));
         assertEquals(Set.of("process1"),
-            streamsGroup.currentStandbyTaskProcessIds(barSubtopology, 5));
+                streamsGroup.currentStandbyTaskProcessIds(barSubtopology, 5));
         assertEquals(Set.of("process1"),
-            streamsGroup.currentWarmupTaskProcessIds(barSubtopology, 6));
+                streamsGroup.currentWarmupTaskProcessIds(barSubtopology, 6));
         assertNull(streamsGroup.currentActiveTaskProcessId(zarSubtopology, 7));
         assertEquals(Set.of(),
-            streamsGroup.currentStandbyTaskProcessIds(zarSubtopology, 8));
+                streamsGroup.currentStandbyTaskProcessIds(zarSubtopology, 8));
         assertEquals(Set.of(),
-            streamsGroup.currentWarmupTaskProcessIds(zarSubtopology, 9));
+                streamsGroup.currentWarmupTaskProcessIds(zarSubtopology, 9));
     }
 
     @Test
@@ -305,32 +305,32 @@ public class StreamsGroupTest {
         StreamsGroupMember member;
 
         member = new StreamsGroupMember.Builder("member")
-            .setProcessId("process")
-            .setAssignedTasks(TasksTupleWithEpochs.EMPTY)
-            .setTasksPendingRevocation(
-                new TasksTupleWithEpochs(
-                    mkTasksPerSubtopologyWithCommonEpoch(10, mkTasks(fooSubtopologyId, 1)),
-                    mkTasksPerSubtopology(mkTasks(fooSubtopologyId, 2)),
-                    mkTasksPerSubtopology(mkTasks(fooSubtopologyId, 3))
+                .setProcessId("process")
+                .setAssignedTasks(TasksTupleWithEpochs.EMPTY)
+                .setTasksPendingRevocation(
+                        new TasksTupleWithEpochs(
+                                mkTasksPerSubtopologyWithCommonEpoch(10, mkTasks(fooSubtopologyId, 1)),
+                                mkTasksPerSubtopology(mkTasks(fooSubtopologyId, 2)),
+                                mkTasksPerSubtopology(mkTasks(fooSubtopologyId, 3))
+                        )
                 )
-            )
-            .build();
+                .build();
 
         streamsGroup.updateMember(member);
 
         assertEquals("process", streamsGroup.currentActiveTaskProcessId(fooSubtopologyId, 1));
 
         member = new StreamsGroupMember.Builder(member)
-            .setProcessId("process1")
-            .setAssignedTasks(
-                new TasksTupleWithEpochs(
-                    mkTasksPerSubtopologyWithCommonEpoch(10, mkTasks(fooSubtopologyId, 1)),
-                    mkTasksPerSubtopology(mkTasks(fooSubtopologyId, 2)),
-                    mkTasksPerSubtopology(mkTasks(fooSubtopologyId, 3))
+                .setProcessId("process1")
+                .setAssignedTasks(
+                        new TasksTupleWithEpochs(
+                                mkTasksPerSubtopologyWithCommonEpoch(10, mkTasks(fooSubtopologyId, 1)),
+                                mkTasksPerSubtopology(mkTasks(fooSubtopologyId, 2)),
+                                mkTasksPerSubtopology(mkTasks(fooSubtopologyId, 3))
+                        )
                 )
-            )
-            .setTasksPendingRevocation(TasksTupleWithEpochs.EMPTY)
-            .build();
+                .setTasksPendingRevocation(TasksTupleWithEpochs.EMPTY)
+                .build();
 
         streamsGroup.updateMember(member);
 
@@ -343,28 +343,28 @@ public class StreamsGroupTest {
         StreamsGroup streamsGroup = createStreamsGroup("foo");
 
         StreamsGroupMember m1 = new StreamsGroupMember.Builder("m1")
-            .setProcessId("process1")
-            .setAssignedTasks(
-                new TasksTupleWithEpochs(
-                    mkTasksPerSubtopologyWithCommonEpoch(10, mkTasks(fooSubtopologyId, 1)),
-                    Map.of(),
-                    Map.of()
+                .setProcessId("process1")
+                .setAssignedTasks(
+                        new TasksTupleWithEpochs(
+                                mkTasksPerSubtopologyWithCommonEpoch(10, mkTasks(fooSubtopologyId, 1)),
+                                Map.of(),
+                                Map.of()
+                        )
                 )
-            )
-            .build();
+                .build();
 
         streamsGroup.updateMember(m1);
 
         StreamsGroupMember m2 = new StreamsGroupMember.Builder("m2")
-            .setProcessId("process2")
-            .setAssignedTasks(
-                new TasksTupleWithEpochs(
-                    mkTasksPerSubtopologyWithCommonEpoch(9, mkTasks(fooSubtopologyId, 1)),
-                    Map.of(),
-                    Map.of()
+                .setProcessId("process2")
+                .setAssignedTasks(
+                        new TasksTupleWithEpochs(
+                                mkTasksPerSubtopologyWithCommonEpoch(9, mkTasks(fooSubtopologyId, 1)),
+                                Map.of(),
+                                Map.of()
+                        )
                 )
-            )
-            .build();
+                .build();
 
         // We allow m2 to acquire foo-1 despite the fact that m1 has ownership because the processId is different.
         streamsGroup.updateMember(m2);
@@ -381,22 +381,22 @@ public class StreamsGroupTest {
 
         // Removing should be a no-op when there is no process id set.
         streamsGroup.removeTaskProcessIds(
-            TaskAssignmentTestUtil.mkTasksTupleWithCommonEpoch(taskRole, 10, mkTasks(fooSubtopologyId, 1)),
-            "process"
+                TaskAssignmentTestUtil.mkTasksTupleWithCommonEpoch(taskRole, 10, mkTasks(fooSubtopologyId, 1)),
+                "process"
         );
 
         StreamsGroupMember m1 = new StreamsGroupMember.Builder("m1")
-            .setProcessId("process")
-            .setAssignedTasks(TaskAssignmentTestUtil.mkTasksTupleWithCommonEpoch(taskRole, 10, mkTasks(fooSubtopologyId, 1)))
-            .build();
+                .setProcessId("process")
+                .setAssignedTasks(TaskAssignmentTestUtil.mkTasksTupleWithCommonEpoch(taskRole, 10, mkTasks(fooSubtopologyId, 1)))
+                .build();
 
         streamsGroup.updateMember(m1);
 
         // Removing with incorrect process id should do nothing. 
         // A debug message is logged, no exception is thrown.
         streamsGroup.removeTaskProcessIds(
-            TaskAssignmentTestUtil.mkTasksTupleWithCommonEpoch(taskRole, 9, mkTasks(fooSubtopologyId, 1)),
-            "process1"
+                TaskAssignmentTestUtil.mkTasksTupleWithCommonEpoch(taskRole, 9, mkTasks(fooSubtopologyId, 1)),
+                "process1"
         );
         if (taskRole == TaskRole.ACTIVE) {
             assertEquals("process", streamsGroup.currentActiveTaskProcessId(fooSubtopologyId, 1));
@@ -409,22 +409,22 @@ public class StreamsGroupTest {
         StreamsGroup streamsGroup = createStreamsGroup("foo");
 
         streamsGroup.addTaskProcessId(
-            new TasksTupleWithEpochs(
-                mkTasksPerSubtopologyWithCommonEpoch(10, mkTasks(fooSubtopologyId, 1)),
-                mkTasksPerSubtopology(mkTasks(fooSubtopologyId, 2)),
-                mkTasksPerSubtopology(mkTasks(fooSubtopologyId, 3))
-            ),
-            "process"
+                new TasksTupleWithEpochs(
+                        mkTasksPerSubtopologyWithCommonEpoch(10, mkTasks(fooSubtopologyId, 1)),
+                        mkTasksPerSubtopology(mkTasks(fooSubtopologyId, 2)),
+                        mkTasksPerSubtopology(mkTasks(fooSubtopologyId, 3))
+                ),
+                "process"
         );
 
         // We allow replacing with a different process id.
         streamsGroup.addTaskProcessId(
-            new TasksTupleWithEpochs(
-                mkTasksPerSubtopologyWithCommonEpoch(10, mkTasks(fooSubtopologyId, 1)),
-                mkTasksPerSubtopology(mkTasks(fooSubtopologyId, 2)),
-                mkTasksPerSubtopology(mkTasks(fooSubtopologyId, 3))
-            ),
-            "process2"
+                new TasksTupleWithEpochs(
+                        mkTasksPerSubtopologyWithCommonEpoch(10, mkTasks(fooSubtopologyId, 1)),
+                        mkTasksPerSubtopology(mkTasks(fooSubtopologyId, 2)),
+                        mkTasksPerSubtopology(mkTasks(fooSubtopologyId, 3))
+                ),
+                "process2"
         );
 
         assertEquals("process2", streamsGroup.currentActiveTaskProcessId(fooSubtopologyId, 1));
@@ -440,22 +440,22 @@ public class StreamsGroupTest {
         StreamsGroupMember member;
 
         member = new StreamsGroupMember.Builder("member")
-            .setProcessId("process")
-            .setAssignedTasks(
-                new TasksTupleWithEpochs(
-                    mkTasksPerSubtopologyWithCommonEpoch(10, mkTasks(fooSubtopology, 1)),
-                    mkTasksPerSubtopology(mkTasks(fooSubtopology, 2)),
-                    mkTasksPerSubtopology(mkTasks(fooSubtopology, 3))
+                .setProcessId("process")
+                .setAssignedTasks(
+                        new TasksTupleWithEpochs(
+                                mkTasksPerSubtopologyWithCommonEpoch(10, mkTasks(fooSubtopology, 1)),
+                                mkTasksPerSubtopology(mkTasks(fooSubtopology, 2)),
+                                mkTasksPerSubtopology(mkTasks(fooSubtopology, 3))
+                        )
                 )
-            )
-            .setTasksPendingRevocation(
-                new TasksTupleWithEpochs(
-                    mkTasksPerSubtopologyWithCommonEpoch(10, mkTasks(barSubtopology, 4)),
-                    mkTasksPerSubtopology(mkTasks(barSubtopology, 5)),
-                    mkTasksPerSubtopology(mkTasks(barSubtopology, 6))
+                .setTasksPendingRevocation(
+                        new TasksTupleWithEpochs(
+                                mkTasksPerSubtopologyWithCommonEpoch(10, mkTasks(barSubtopology, 4)),
+                                mkTasksPerSubtopology(mkTasks(barSubtopology, 5)),
+                                mkTasksPerSubtopology(mkTasks(barSubtopology, 6))
+                        )
                 )
-            )
-            .build();
+                .build();
 
         streamsGroup.updateMember(member);
 
@@ -488,10 +488,10 @@ public class StreamsGroupTest {
         assertEquals(StreamsGroupState.EMPTY, streamsGroup.state());
 
         StreamsGroupMember member1 = new StreamsGroupMember.Builder("member1")
-            .setState(MemberState.STABLE)
-            .setMemberEpoch(2)
-            .setPreviousMemberEpoch(0)
-            .build();
+                .setState(MemberState.STABLE)
+                .setMemberEpoch(2)
+                .setPreviousMemberEpoch(0)
+                .build();
 
         streamsGroup.updateMember(member1);
         streamsGroup.setGroupEpoch(2);
@@ -507,10 +507,10 @@ public class StreamsGroupTest {
         assertEquals(StreamsGroup.StreamsGroupState.ASSIGNING, streamsGroup.state());
 
         StreamsGroupMember member2 = new StreamsGroupMember.Builder("member2")
-            .setState(MemberState.STABLE)
-            .setMemberEpoch(2)
-            .setPreviousMemberEpoch(0)
-            .build();
+                .setState(MemberState.STABLE)
+                .setMemberEpoch(2)
+                .setPreviousMemberEpoch(0)
+                .build();
 
         streamsGroup.updateMember(member2);
         streamsGroup.setGroupEpoch(3);
@@ -523,10 +523,10 @@ public class StreamsGroupTest {
         assertEquals(StreamsGroup.StreamsGroupState.RECONCILING, streamsGroup.state());
 
         member1 = new StreamsGroupMember.Builder(member1)
-            .setState(MemberState.STABLE)
-            .setMemberEpoch(3)
-            .setPreviousMemberEpoch(2)
-            .build();
+                .setState(MemberState.STABLE)
+                .setMemberEpoch(3)
+                .setPreviousMemberEpoch(2)
+                .build();
 
         streamsGroup.updateMember(member1);
 
@@ -535,10 +535,10 @@ public class StreamsGroupTest {
 
         // Member 2 is not stable so the group stays in reconciling state.
         member2 = new StreamsGroupMember.Builder(member2)
-            .setState(MemberState.UNREVOKED_TASKS)
-            .setMemberEpoch(3)
-            .setPreviousMemberEpoch(2)
-            .build();
+                .setState(MemberState.UNREVOKED_TASKS)
+                .setMemberEpoch(3)
+                .setPreviousMemberEpoch(2)
+                .build();
 
         streamsGroup.updateMember(member2);
 
@@ -546,10 +546,10 @@ public class StreamsGroupTest {
         assertEquals(StreamsGroup.StreamsGroupState.RECONCILING, streamsGroup.state());
 
         member2 = new StreamsGroupMember.Builder(member2)
-            .setState(MemberState.STABLE)
-            .setMemberEpoch(3)
-            .setPreviousMemberEpoch(2)
-            .build();
+                .setState(MemberState.STABLE)
+                .setMemberEpoch(3)
+                .setPreviousMemberEpoch(2)
+                .build();
 
         streamsGroup.updateMember(member2);
 
@@ -624,18 +624,18 @@ public class StreamsGroupTest {
 
         // The member does not exist.
         assertThrows(UnknownMemberIdException.class, () ->
-            group.validateOffsetCommit("member-id", null, 0, isTransactional, version));
+                group.validateOffsetCommit("member-id", null, 0, isTransactional, version));
 
         // Create a member.
         group.updateMember(new StreamsGroupMember.Builder("member-id").setMemberEpoch(0).build());
 
         // A call from the admin client should fail as the group is not empty.
         assertThrows(UnknownMemberIdException.class, () ->
-            group.validateOffsetCommit("", "", -1, isTransactional, version));
+                group.validateOffsetCommit("", "", -1, isTransactional, version));
 
         // The member epoch is stale.
         assertThrows(StaleMemberEpochException.class, () ->
-            group.validateOffsetCommit("member-id", "", 10, isTransactional, version));
+                group.validateOffsetCommit("member-id", "", 10, isTransactional, version));
 
         // This should succeed.
         group.validateOffsetCommit("member-id", "", 0, isTransactional, version);
@@ -656,27 +656,27 @@ public class StreamsGroupTest {
 
         // The member does not exist.
         assertThrows(UnknownMemberIdException.class, () ->
-            group.validateOffsetCommit("member-id", null, 0, isTransactional, version));
+                group.validateOffsetCommit("member-id", null, 0, isTransactional, version));
 
         // Create members.
         group.updateMember(
-            new StreamsGroupMember
-                .Builder("new-protocol-member-id").setMemberEpoch(0).build()
+                new StreamsGroupMember
+                        .Builder("new-protocol-member-id").setMemberEpoch(0).build()
         );
 
         // A call from the admin client should fail as the group is not empty.
         assertThrows(UnknownMemberIdException.class, () ->
-            group.validateOffsetCommit("", "", -1, isTransactional, version));
+                group.validateOffsetCommit("", "", -1, isTransactional, version));
         assertThrows(UnknownMemberIdException.class, () ->
-            group.validateOffsetCommit("", null, -1, isTransactional, version));
+                group.validateOffsetCommit("", null, -1, isTransactional, version));
 
         // The member epoch is stale (newer than current).
         if (version >= 9) {
             assertThrows(StaleMemberEpochException.class, () ->
-                group.validateOffsetCommit("new-protocol-member-id", "", 10, isTransactional, version));
+                    group.validateOffsetCommit("new-protocol-member-id", "", 10, isTransactional, version));
         } else {
             assertThrows(UnsupportedVersionException.class, () ->
-                group.validateOffsetCommit("new-protocol-member-id", "", 10, isTransactional, version));
+                    group.validateOffsetCommit("new-protocol-member-id", "", 10, isTransactional, version));
         }
 
         // This should succeed (matching member epoch).
@@ -684,107 +684,107 @@ public class StreamsGroupTest {
             group.validateOffsetCommit("new-protocol-member-id", "", 0, isTransactional, version);
         } else {
             assertThrows(UnsupportedVersionException.class, () ->
-                group.validateOffsetCommit("new-protocol-member-id", "", 0, isTransactional, version));
+                    group.validateOffsetCommit("new-protocol-member-id", "", 0, isTransactional, version));
         }
     }
 
     @Test
     public void testValidateOffsetCommitWithOlderEpoch() {
         StreamsGroup group = createStreamsGroup("group-foo");
-        
+
         group.setTopology(new StreamsTopology(1, Map.of("0", new StreamsGroupTopologyValue.Subtopology()
-            .setSubtopologyId("0")
-            .setSourceTopics(List.of("input-topic")))));
-        
+                .setSubtopologyId("0")
+                .setSourceTopics(List.of("input-topic")))));
+
         group.updateMember(new StreamsGroupMember.Builder("member-1")
-            .setMemberEpoch(2)
-            .setAssignedTasks(new TasksTupleWithEpochs(
-                Map.of("0", Map.of(0, 2, 1, 1)),
-                Map.of(), Map.of()))
-            .build());
-        
+                .setMemberEpoch(2)
+                .setAssignedTasks(new TasksTupleWithEpochs(
+                        Map.of("0", Map.of(0, 2, 1, 1)),
+                        Map.of(), Map.of()))
+                .build());
+
         CommitPartitionValidator validator = group.validateOffsetCommit(
-            "member-1", "", 1, false, ApiKeys.OFFSET_COMMIT.latestVersion());
-        
+                "member-1", "", 1, false, ApiKeys.OFFSET_COMMIT.latestVersion());
+
         // Received epoch (1) < assignment epoch (2) should throw
         assertThrows(StaleMemberEpochException.class, () ->
-            validator.validate("input-topic", Uuid.ZERO_UUID, 0));
+                validator.validate("input-topic", Uuid.ZERO_UUID, 0));
     }
 
     @Test
     public void testValidateOffsetCommitWithOlderEpochMissingTopology() {
         StreamsGroup group = createStreamsGroup("group-foo");
-        
+
         group.updateMember(new StreamsGroupMember.Builder("member-1")
-            .setMemberEpoch(2)
-            .build());
-        
+                .setMemberEpoch(2)
+                .build());
+
         // Topology is retrieved when creating validator, so exception is thrown here
         assertThrows(StaleMemberEpochException.class, () ->
-            group.validateOffsetCommit("member-1", "", 1, false, ApiKeys.OFFSET_COMMIT.latestVersion()));
+                group.validateOffsetCommit("member-1", "", 1, false, ApiKeys.OFFSET_COMMIT.latestVersion()));
     }
 
     @Test
     public void testValidateOffsetCommitWithOlderEpochMissingSubtopology() {
         StreamsGroup group = createStreamsGroup("group-foo");
-        
+
         group.setTopology(new StreamsTopology(1, Map.of("0", new StreamsGroupTopologyValue.Subtopology()
-            .setSubtopologyId("0")
-            .setSourceTopics(List.of("input-topic")))));
-        
+                .setSubtopologyId("0")
+                .setSourceTopics(List.of("input-topic")))));
+
         group.updateMember(new StreamsGroupMember.Builder("member-1")
-            .setMemberEpoch(2)
-            .build());
-        
+                .setMemberEpoch(2)
+                .build());
+
         CommitPartitionValidator validator = group.validateOffsetCommit(
-            "member-1", "", 1, false, ApiKeys.OFFSET_COMMIT.latestVersion());
-        
+                "member-1", "", 1, false, ApiKeys.OFFSET_COMMIT.latestVersion());
+
         assertThrows(StaleMemberEpochException.class, () ->
-            validator.validate("unknown-topic", Uuid.ZERO_UUID, 0));
+                validator.validate("unknown-topic", Uuid.ZERO_UUID, 0));
     }
 
     @Test
     public void testValidateOffsetCommitWithOlderEpochUnassignedPartition() {
         StreamsGroup group = createStreamsGroup("group-foo");
-        
+
         group.setTopology(new StreamsTopology(1, Map.of("0", new StreamsGroupTopologyValue.Subtopology()
-            .setSubtopologyId("0")
-            .setSourceTopics(List.of("input-topic")))));
-        
+                .setSubtopologyId("0")
+                .setSourceTopics(List.of("input-topic")))));
+
         group.updateMember(new StreamsGroupMember.Builder("member-1")
-            .setMemberEpoch(2)
-            .setAssignedTasks(new TasksTupleWithEpochs(
-                Map.of("0", Map.of(0, 1)),
-                Map.of(), Map.of()))
-            .setTasksPendingRevocation(TasksTupleWithEpochs.EMPTY)
-            .build());
-        
+                .setMemberEpoch(2)
+                .setAssignedTasks(new TasksTupleWithEpochs(
+                        Map.of("0", Map.of(0, 1)),
+                        Map.of(), Map.of()))
+                .setTasksPendingRevocation(TasksTupleWithEpochs.EMPTY)
+                .build());
+
         CommitPartitionValidator validator = group.validateOffsetCommit(
-            "member-1", "", 1, false, ApiKeys.OFFSET_COMMIT.latestVersion());
+                "member-1", "", 1, false, ApiKeys.OFFSET_COMMIT.latestVersion());
 
         // Partition 1 not assigned should throw
         assertThrows(StaleMemberEpochException.class, () ->
-            validator.validate("input-topic", Uuid.ZERO_UUID, 1));
+                validator.validate("input-topic", Uuid.ZERO_UUID, 1));
     }
 
     @Test
     public void testValidateOffsetCommitWithOlderEpochValidAssignment() {
         StreamsGroup group = createStreamsGroup("group-foo");
-        
+
         group.setTopology(new StreamsTopology(1, Map.of("0", new StreamsGroupTopologyValue.Subtopology()
-            .setSubtopologyId("0")
-            .setSourceTopics(List.of("input-topic")))));
-        
+                .setSubtopologyId("0")
+                .setSourceTopics(List.of("input-topic")))));
+
         group.updateMember(new StreamsGroupMember.Builder("member-1")
-            .setMemberEpoch(5)
-            .setAssignedTasks(new TasksTupleWithEpochs(
-                Map.of("0", Map.of(0, 2, 1, 2)),
-                Map.of(), Map.of()))
-            .build());
-        
+                .setMemberEpoch(5)
+                .setAssignedTasks(new TasksTupleWithEpochs(
+                        Map.of("0", Map.of(0, 2, 1, 2)),
+                        Map.of(), Map.of()))
+                .build());
+
         CommitPartitionValidator validator = group.validateOffsetCommit(
-            "member-1", "", 2, false, ApiKeys.OFFSET_COMMIT.latestVersion());
-        
+                "member-1", "", 2, false, ApiKeys.OFFSET_COMMIT.latestVersion());
+
         // Received epoch 2 == assignment epoch 2 should succeed
         validator.validate("input-topic", Uuid.ZERO_UUID, 0);
         validator.validate("input-topic", Uuid.ZERO_UUID, 1);
@@ -794,9 +794,9 @@ public class StreamsGroupTest {
     public void testAsListedGroup() {
         SnapshotRegistry snapshotRegistry = new SnapshotRegistry(LOG_CONTEXT);
         StreamsGroup group = new StreamsGroup(
-            LOG_CONTEXT,
-            snapshotRegistry,
-            "group-foo"
+                LOG_CONTEXT,
+                snapshotRegistry,
+                "group-foo"
         );
         group.setGroupEpoch(1);
         group.setTopology(new StreamsTopology(1, Map.of()));
@@ -804,8 +804,8 @@ public class StreamsGroupTest {
         group.setConfiguredTopology(new ConfiguredTopology(1, 0, Optional.of(new TreeMap<>()), Map.of(), Optional.empty()));
         group.setTargetAssignmentMetadata(1, 12345L);
         group.updateMember(new StreamsGroupMember.Builder("member1")
-            .setMemberEpoch(1)
-            .build());
+                .setMemberEpoch(1)
+                .build());
         snapshotRegistry.idempotentCreateSnapshot(1);
 
         ListGroupsResponseData.ListedGroup listedGroup = group.asListedGroup(1);
@@ -820,9 +820,9 @@ public class StreamsGroupTest {
     public void testValidateOffsetFetch() {
         SnapshotRegistry snapshotRegistry = new SnapshotRegistry(LOG_CONTEXT);
         StreamsGroup group = new StreamsGroup(
-            LOG_CONTEXT,
-            snapshotRegistry,
-            "group-foo"
+                LOG_CONTEXT,
+                snapshotRegistry,
+                "group-foo"
         );
 
         // Simulate a call from the admin client without member ID and member epoch.
@@ -830,7 +830,7 @@ public class StreamsGroupTest {
 
         // The member does not exist.
         assertThrows(UnknownMemberIdException.class, () ->
-            group.validateOffsetFetch("member-id", 0, Long.MAX_VALUE));
+                group.validateOffsetFetch("member-id", 0, Long.MAX_VALUE));
 
         // Create a member.
         snapshotRegistry.idempotentCreateSnapshot(0);
@@ -838,11 +838,11 @@ public class StreamsGroupTest {
 
         // The member does not exist at last committed offset 0.
         assertThrows(UnknownMemberIdException.class, () ->
-            group.validateOffsetFetch("member-id", 0, 0));
+                group.validateOffsetFetch("member-id", 0, 0));
 
         // The member exists but the epoch is stale when the last committed offset is not considered.
         assertThrows(StaleMemberEpochException.class, () ->
-            group.validateOffsetFetch("member-id", 10, Long.MAX_VALUE));
+                group.validateOffsetFetch("member-id", 10, Long.MAX_VALUE));
 
         // This should succeed.
         group.validateOffsetFetch("member-id", 0, Long.MAX_VALUE);
@@ -856,10 +856,10 @@ public class StreamsGroupTest {
         assertDoesNotThrow(streamsGroup::validateDeleteGroup);
 
         StreamsGroupMember member1 = new StreamsGroupMember.Builder("member1")
-            .setMemberEpoch(2)
-            .setPreviousMemberEpoch(0)
-            .setState(MemberState.STABLE)
-            .build();
+                .setMemberEpoch(2)
+                .setPreviousMemberEpoch(0)
+                .setState(MemberState.STABLE)
+                .build();
         streamsGroup.updateMember(member1);
 
         assertEquals(StreamsGroup.StreamsGroupState.NOT_READY, streamsGroup.state());
@@ -916,73 +916,73 @@ public class StreamsGroupTest {
         group.setValidatedTopologyEpoch(1);
         group.setTargetAssignmentMetadata(1, 12345L);
         group.updateMember(new StreamsGroupMember.Builder("member1")
-            .setMemberEpoch(1)
-            .setPreviousMemberEpoch(0)
-            .setState(MemberState.STABLE)
-            .setInstanceId("instance1")
-            .setRackId("rack1")
-            .setClientId("client1")
-            .setClientHost("host1")
-            .setRebalanceTimeoutMs(1000)
-            .setTopologyEpoch(1)
-            .setProcessId("process1")
-            .setUserEndpoint(new StreamsGroupMemberMetadataValue.Endpoint().setHost("host1").setPort(9092))
-            .setClientTags(Map.of("tag1", "value1"))
-            .setAssignedTasks(TasksTupleWithEpochs.EMPTY)
-            .setTasksPendingRevocation(TasksTupleWithEpochs.EMPTY)
-            .build());
+                .setMemberEpoch(1)
+                .setPreviousMemberEpoch(0)
+                .setState(MemberState.STABLE)
+                .setInstanceId("instance1")
+                .setRackId("rack1")
+                .setClientId("client1")
+                .setClientHost("host1")
+                .setRebalanceTimeoutMs(1000)
+                .setTopologyEpoch(1)
+                .setProcessId("process1")
+                .setUserEndpoint(new StreamsGroupMemberMetadataValue.Endpoint().setHost("host1").setPort(9092))
+                .setClientTags(Map.of("tag1", "value1"))
+                .setAssignedTasks(TasksTupleWithEpochs.EMPTY)
+                .setTasksPendingRevocation(TasksTupleWithEpochs.EMPTY)
+                .build());
         group.updateMember(new StreamsGroupMember.Builder("member2")
-            .setMemberEpoch(1)
-            .setPreviousMemberEpoch(0)
-            .setState(MemberState.STABLE)
-            .setInstanceId("instance2")
-            .setRackId("rack2")
-            .setClientId("client2")
-            .setClientHost("host2")
-            .setRebalanceTimeoutMs(1000)
-            .setTopologyEpoch(1)
-            .setProcessId("process2")
-            .setUserEndpoint(new StreamsGroupMemberMetadataValue.Endpoint().setHost("host2").setPort(9092))
-            .setClientTags(Map.of("tag2", "value2"))
-            .setAssignedTasks(TasksTupleWithEpochs.EMPTY)
-            .setTasksPendingRevocation(TasksTupleWithEpochs.EMPTY)
-            .build());
+                .setMemberEpoch(1)
+                .setPreviousMemberEpoch(0)
+                .setState(MemberState.STABLE)
+                .setInstanceId("instance2")
+                .setRackId("rack2")
+                .setClientId("client2")
+                .setClientHost("host2")
+                .setRebalanceTimeoutMs(1000)
+                .setTopologyEpoch(1)
+                .setProcessId("process2")
+                .setUserEndpoint(new StreamsGroupMemberMetadataValue.Endpoint().setHost("host2").setPort(9092))
+                .setClientTags(Map.of("tag2", "value2"))
+                .setAssignedTasks(TasksTupleWithEpochs.EMPTY)
+                .setTasksPendingRevocation(TasksTupleWithEpochs.EMPTY)
+                .build());
         snapshotRegistry.idempotentCreateSnapshot(1);
 
         StreamsGroupDescribeResponseData.DescribedGroup expected = new StreamsGroupDescribeResponseData.DescribedGroup()
-            .setGroupId("group-id-1")
-            .setGroupState(StreamsGroup.StreamsGroupState.STABLE.toString())
-            .setGroupEpoch(1)
-            .setTopology(new StreamsGroupDescribeResponseData.Topology().setEpoch(1).setSubtopologies(List.of()))
-            .setAssignmentEpoch(1)
-            .setMembers(Arrays.asList(
-                new StreamsGroupDescribeResponseData.Member()
-                    .setMemberId("member1")
-                    .setMemberEpoch(1)
-                    .setInstanceId("instance1")
-                    .setRackId("rack1")
-                    .setClientId("client1")
-                    .setClientHost("host1")
-                    .setTopologyEpoch(1)
-                    .setProcessId("process1")
-                    .setUserEndpoint(new StreamsGroupDescribeResponseData.Endpoint().setHost("host1").setPort(9092))
-                    .setClientTags(List.of(new StreamsGroupDescribeResponseData.KeyValue().setKey("tag1").setValue("value1")))
-                    .setAssignment(new StreamsGroupDescribeResponseData.Assignment())
-                    .setTargetAssignment(new StreamsGroupDescribeResponseData.Assignment()),
-                new StreamsGroupDescribeResponseData.Member()
-                    .setMemberId("member2")
-                    .setMemberEpoch(1)
-                    .setInstanceId("instance2")
-                    .setRackId("rack2")
-                    .setClientId("client2")
-                    .setClientHost("host2")
-                    .setTopologyEpoch(1)
-                    .setProcessId("process2")
-                    .setUserEndpoint(new StreamsGroupDescribeResponseData.Endpoint().setHost("host2").setPort(9092))
-                    .setClientTags(List.of(new StreamsGroupDescribeResponseData.KeyValue().setKey("tag2").setValue("value2")))
-                    .setAssignment(new StreamsGroupDescribeResponseData.Assignment())
-                    .setTargetAssignment(new StreamsGroupDescribeResponseData.Assignment())
-            ));
+                .setGroupId("group-id-1")
+                .setGroupState(StreamsGroup.StreamsGroupState.STABLE.toString())
+                .setGroupEpoch(1)
+                .setTopology(new StreamsGroupDescribeResponseData.Topology().setEpoch(1).setSubtopologies(List.of()))
+                .setAssignmentEpoch(1)
+                .setMembers(Arrays.asList(
+                        new StreamsGroupDescribeResponseData.Member()
+                                .setMemberId("member1")
+                                .setMemberEpoch(1)
+                                .setInstanceId("instance1")
+                                .setRackId("rack1")
+                                .setClientId("client1")
+                                .setClientHost("host1")
+                                .setTopologyEpoch(1)
+                                .setProcessId("process1")
+                                .setUserEndpoint(new StreamsGroupDescribeResponseData.Endpoint().setHost("host1").setPort(9092))
+                                .setClientTags(List.of(new StreamsGroupDescribeResponseData.KeyValue().setKey("tag1").setValue("value1")))
+                                .setAssignment(new StreamsGroupDescribeResponseData.Assignment())
+                                .setTargetAssignment(new StreamsGroupDescribeResponseData.Assignment()),
+                        new StreamsGroupDescribeResponseData.Member()
+                                .setMemberId("member2")
+                                .setMemberEpoch(1)
+                                .setInstanceId("instance2")
+                                .setRackId("rack2")
+                                .setClientId("client2")
+                                .setClientHost("host2")
+                                .setTopologyEpoch(1)
+                                .setProcessId("process2")
+                                .setUserEndpoint(new StreamsGroupDescribeResponseData.Endpoint().setHost("host2").setPort(9092))
+                                .setClientTags(List.of(new StreamsGroupDescribeResponseData.KeyValue().setKey("tag2").setValue("value2")))
+                                .setAssignment(new StreamsGroupDescribeResponseData.Assignment())
+                                .setTargetAssignment(new StreamsGroupDescribeResponseData.Assignment())
+                ));
         StreamsGroupDescribeResponseData.DescribedGroup actual = group.asDescribedGroup(1);
 
         assertEquals(expected, actual);
@@ -997,7 +997,7 @@ public class StreamsGroupTest {
         assertFalse(group.isInStates(Set.of("Empty"), 0));
 
         group.updateMember(new StreamsGroupMember.Builder("member1")
-            .build());
+                .build());
         snapshotRegistry.idempotentCreateSnapshot(1);
         assertTrue(group.isInStates(Set.of("empty"), 0));
         assertTrue(group.isInStates(Set.of("not_ready"), 1));
@@ -1008,14 +1008,14 @@ public class StreamsGroupTest {
     public void testComputeMetadataHash() {
         SnapshotRegistry snapshotRegistry = new SnapshotRegistry(LOG_CONTEXT);
         StreamsGroup streamsGroup = new StreamsGroup(
-            LOG_CONTEXT,
-            snapshotRegistry,
-            "group-foo"
+                LOG_CONTEXT,
+                snapshotRegistry,
+                "group-foo"
         );
 
         MetadataImage metadataImage = new MetadataImageBuilder()
-            .addTopic(Uuid.randomUuid(), "topic1", 1)
-            .build();
+                .addTopic(Uuid.randomUuid(), "topic1", 1)
+                .build();
 
         StreamsTopology topology = mock(StreamsTopology.class);
         when(topology.requiredTopics()).thenReturn(Set.of("topic1"));
@@ -1029,13 +1029,13 @@ public class StreamsGroupTest {
     void testCreateGroupTombstoneRecords() {
         SnapshotRegistry snapshotRegistry = new SnapshotRegistry(LOG_CONTEXT);
         StreamsGroup streamsGroup = new StreamsGroup(
-            LOG_CONTEXT,
-            snapshotRegistry,
-            "test-group"
+                LOG_CONTEXT,
+                snapshotRegistry,
+                "test-group"
         );
         streamsGroup.updateMember(new StreamsGroupMember.Builder("member1")
-            .setMemberEpoch(1)
-            .build());
+                .setMemberEpoch(1)
+                .build());
         List<CoordinatorRecord> records = new ArrayList<>();
 
         streamsGroup.createGroupTombstoneRecords(records);
@@ -1065,17 +1065,17 @@ public class StreamsGroupTest {
         assertFalse(streamsGroup.isSubscribedToTopic("non-existent-topic"));
 
         StreamsTopology topology = new StreamsTopology(1,
-            Map.of("test-subtopology",
-                new StreamsGroupTopologyValue.Subtopology()
-                    .setSubtopologyId("test-subtopology")
-                    .setSourceTopics(List.of("test-topic1"))
-                    .setRepartitionSourceTopics(List.of(new StreamsGroupTopologyValue.TopicInfo().setName("test-topic2")))
-                    .setRepartitionSinkTopics(List.of("test-topic2"))
-            ));
+                Map.of("test-subtopology",
+                        new StreamsGroupTopologyValue.Subtopology()
+                                .setSubtopologyId("test-subtopology")
+                                .setSourceTopics(List.of("test-topic1"))
+                                .setRepartitionSourceTopics(List.of(new StreamsGroupTopologyValue.TopicInfo().setName("test-topic2")))
+                                .setRepartitionSinkTopics(List.of("test-topic2"))
+                ));
         streamsGroup.setTopology(topology);
 
         streamsGroup.updateMember(streamsGroup.getOrCreateDefaultMember("member-id"));
-        
+
         assertTrue(streamsGroup.isSubscribedToTopic("test-topic1"));
         assertTrue(streamsGroup.isSubscribedToTopic("test-topic2"));
         assertFalse(streamsGroup.isSubscribedToTopic("non-existent-topic"));
@@ -1126,36 +1126,36 @@ public class StreamsGroupTest {
 
         // Create a topology with subtopologies
         Map<String, StreamsGroupTopologyValue.Subtopology> subtopologies = Map.of(
-            "sub-1", new StreamsGroupTopologyValue.Subtopology()
-                .setSubtopologyId("sub-1")
-                .setSourceTopics(List.of("input-topic"))
-                .setRepartitionSourceTopics(List.of(
-                    new StreamsGroupTopologyValue.TopicInfo().setName("repartition-topic")
-                ))
-                .setStateChangelogTopics(List.of(
-                    new StreamsGroupTopologyValue.TopicInfo().setName("changelog-topic")
-                ))
+                "sub-1", new StreamsGroupTopologyValue.Subtopology()
+                        .setSubtopologyId("sub-1")
+                        .setSourceTopics(List.of("input-topic"))
+                        .setRepartitionSourceTopics(List.of(
+                                new StreamsGroupTopologyValue.TopicInfo().setName("repartition-topic")
+                        ))
+                        .setStateChangelogTopics(List.of(
+                                new StreamsGroupTopologyValue.TopicInfo().setName("changelog-topic")
+                        ))
         );
 
         group.setGroupEpoch(2);
         group.setTopology(new StreamsTopology(2, subtopologies));
         group.setTargetAssignmentMetadata(2, 12345L);
         group.updateMember(new StreamsGroupMember.Builder("member1")
-            .setMemberEpoch(2)
-            .setPreviousMemberEpoch(1)
-            .setState(MemberState.STABLE)
-            .setInstanceId("instance1")
-            .setRackId("rack1")
-            .setClientId("client1")
-            .setClientHost("host1")
-            .setRebalanceTimeoutMs(1000)
-            .setTopologyEpoch(2)
-            .setProcessId("process1")
-            .setUserEndpoint(new StreamsGroupMemberMetadataValue.Endpoint().setHost("host1").setPort(9092))
-            .setClientTags(Map.of("tag1", "value1"))
-            .setAssignedTasks(TasksTupleWithEpochs.EMPTY)
-            .setTasksPendingRevocation(TasksTupleWithEpochs.EMPTY)
-            .build());
+                .setMemberEpoch(2)
+                .setPreviousMemberEpoch(1)
+                .setState(MemberState.STABLE)
+                .setInstanceId("instance1")
+                .setRackId("rack1")
+                .setClientId("client1")
+                .setClientHost("host1")
+                .setRebalanceTimeoutMs(1000)
+                .setTopologyEpoch(2)
+                .setProcessId("process1")
+                .setUserEndpoint(new StreamsGroupMemberMetadataValue.Endpoint().setHost("host1").setPort(9092))
+                .setClientTags(Map.of("tag1", "value1"))
+                .setAssignedTasks(TasksTupleWithEpochs.EMPTY)
+                .setTasksPendingRevocation(TasksTupleWithEpochs.EMPTY)
+                .build());
         snapshotRegistry.idempotentCreateSnapshot(1);
 
         StreamsGroupDescribeResponseData.DescribedGroup describedGroup = group.asDescribedGroup(1);
@@ -1190,9 +1190,9 @@ public class StreamsGroupTest {
 
         // Create both StreamsTopology and ConfiguredTopology
         Map<String, StreamsGroupTopologyValue.Subtopology> subtopologies = Map.of(
-            "sub-1", new StreamsGroupTopologyValue.Subtopology()
-                .setSubtopologyId("sub-1")
-                .setSourceTopics(List.of("streams-topic"))
+                "sub-1", new StreamsGroupTopologyValue.Subtopology()
+                        .setSubtopologyId("sub-1")
+                        .setSourceTopics(List.of("streams-topic"))
         );
 
         group.setGroupEpoch(3);
@@ -1217,9 +1217,9 @@ public class StreamsGroupTest {
 
         // Create StreamsTopology with subtopologies
         Map<String, StreamsGroupTopologyValue.Subtopology> subtopologies = Map.of(
-            "sub-1", new StreamsGroupTopologyValue.Subtopology()
-                .setSubtopologyId("sub-1")
-                .setSourceTopics(List.of("fallback-topic"))
+                "sub-1", new StreamsGroupTopologyValue.Subtopology()
+                        .setSubtopologyId("sub-1")
+                        .setSourceTopics(List.of("fallback-topic"))
         );
 
         group.setGroupEpoch(4);
@@ -1256,7 +1256,7 @@ public class StreamsGroupTest {
         StreamsGroup streamsGroup = createStreamsGroup("test-group");
 
         Optional<StreamsGroupHeartbeatResponseData.EndpointToPartitions> cached =
-            streamsGroup.cachedEndpointToPartitions("member-1");
+                streamsGroup.cachedEndpointToPartitions("member-1");
 
         assertTrue(cached.isEmpty());
     }
@@ -1265,14 +1265,14 @@ public class StreamsGroupTest {
     public void testCacheEndpointToPartitionsAndRetrieve() {
         StreamsGroup streamsGroup = createStreamsGroup("test-group");
         StreamsGroupHeartbeatResponseData.EndpointToPartitions endpointToPartitions =
-            new StreamsGroupHeartbeatResponseData.EndpointToPartitions();
+                new StreamsGroupHeartbeatResponseData.EndpointToPartitions();
         endpointToPartitions.setUserEndpoint(
-            new StreamsGroupHeartbeatResponseData.Endpoint().setHost("localhost").setPort(9092)
+                new StreamsGroupHeartbeatResponseData.Endpoint().setHost("localhost").setPort(9092)
         );
 
         streamsGroup.cacheEndpointToPartitions("member-1", endpointToPartitions);
         Optional<StreamsGroupHeartbeatResponseData.EndpointToPartitions> cached =
-            streamsGroup.cachedEndpointToPartitions("member-1");
+                streamsGroup.cachedEndpointToPartitions("member-1");
 
         assertTrue(cached.isPresent());
         assertEquals(endpointToPartitions, cached.get());
@@ -1282,12 +1282,12 @@ public class StreamsGroupTest {
     public void testUpdateMemberInvalidatesCache() {
         StreamsGroup streamsGroup = createStreamsGroup("test-group");
         StreamsGroupHeartbeatResponseData.EndpointToPartitions endpointToPartitions =
-            new StreamsGroupHeartbeatResponseData.EndpointToPartitions();
+                new StreamsGroupHeartbeatResponseData.EndpointToPartitions();
 
         // Create initial member
         StreamsGroupMember member = StreamsGroupMember.Builder.withDefaults("member-1")
-            .setProcessId("process-1")
-            .build();
+                .setProcessId("process-1")
+                .build();
         streamsGroup.updateMember(member);
 
         // Cache endpoint info
@@ -1295,8 +1295,8 @@ public class StreamsGroupTest {
 
         // Update member
         StreamsGroupMember updatedMember = StreamsGroupMember.Builder.withDefaults("member-1")
-            .setProcessId("process-1")
-            .build();
+                .setProcessId("process-1")
+                .build();
         streamsGroup.updateMember(updatedMember);
 
         // Cache should be invalidated
@@ -1307,12 +1307,12 @@ public class StreamsGroupTest {
     public void testRemoveMemberRemovesCacheEntry() {
         StreamsGroup streamsGroup = createStreamsGroup("test-group");
         StreamsGroupHeartbeatResponseData.EndpointToPartitions endpointToPartitions =
-            new StreamsGroupHeartbeatResponseData.EndpointToPartitions();
+                new StreamsGroupHeartbeatResponseData.EndpointToPartitions();
 
         // Create member
         StreamsGroupMember member = StreamsGroupMember.Builder.withDefaults("member-1")
-            .setProcessId("process-1")
-            .build();
+                .setProcessId("process-1")
+                .build();
         streamsGroup.updateMember(member);
 
         // Cache endpoint info
@@ -1329,7 +1329,7 @@ public class StreamsGroupTest {
     public void testSetConfiguredTopologyClearsCache() {
         StreamsGroup streamsGroup = createStreamsGroup("test-group");
         StreamsGroupHeartbeatResponseData.EndpointToPartitions endpointToPartitions =
-            new StreamsGroupHeartbeatResponseData.EndpointToPartitions();
+                new StreamsGroupHeartbeatResponseData.EndpointToPartitions();
 
         // Cache some entries
         streamsGroup.cacheEndpointToPartitions("member-1", endpointToPartitions);
